--- a/index.html
+++ b/index.html
@@ -35,19 +35,24 @@
         <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span
                 class="octicon octicon-link"></span></a>Tervetuloa!</h3>
 
-      <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author
-        your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored
-          Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can
-        check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your
-        repository and you’ll see the new branch.</p>
+      <p>Tämä sivu koskee projektiani, jossa olen käynyt pitämässä pariin otteesen (ensimmäisen kerran vuonna 2014)
+        Hämeenkylän yläkoulussa Vantaalla koodausintron matematiikkaan erikoistuneille oppilaille. Kuten tiedetään,
+        koodauksesta tulee ihan oppiaine yläkouluun ja ajattelin siksi julkaista kaiken materiaalini. Mahdollisesti
+        jatkokehitän sitä edelleen. </p>
+
+      <p>Toivottavasti tästä on jollekin ohjelmointia miettivällä opettajalle, oppilaalle tai vaikka oppilaan
+        huoltajalle jonkinlaista hyötyä. Kaikki materiaali on vapaasti käytettävissäsi MIT lisenssin puitteissa. Otan
+        kyllä mielelläni vastaan kommentteja, ehdotuksia ja pull requesteja.</p>
 
       <h3>
         <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span
-                class="octicon octicon-link"></span></a>Designer Templates</h3>
+                class="octicon octicon-link"></span></a>Sivuston tekijä</h3>
 
-      <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse
-        through them. You can easily go back to edit your page before publishing. After publishing your page, you can
-        revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+      <p>Olen erittäin kokenut ohjelmistosuunnittelija / -arkkitehti, jolla on vuodesta 2000 alkaen kokemusta
+        erilaisista
+        ohjelmointitehtävistä. Olen työskennellyt oikeastaan koko urani ajan konsulttina ja vuodesta 2006 alkaen
+        ohjelmistoarkkitehtina <a href="http://www.reaktor.com">Reaktorilla</a>. Koulutukseltani olen tietotekniikan
+        DI teknillisestä korkeakoulusta.</p>
 
       <h3>
         <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span
