Add mention about Racket to web page

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
-  <title>Koodausintro yläkouluun</title>
+  <title>Koodausintro Racketilla yläkouluun</title>
 </head>
 
 <body>
 <header>
   <div class="inner">
-    <h1>Koodausintro yläkouluun</h1>
+    <h1>Koodausintro yläkouluun Racketilla</h1>
 
     <h2></h2>
     <a href="https://github.com/ramik/code-introduction-to-junior-high-school" class="button">
